# virtual-patch-copilot

./: .coverage  .env.example  .gitignore  BACKLOG.md  BASELINE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MODELS.md  NOTICE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
bench/: BASELINE.md  answer_key.yaml
bench/fixtures/nimbus-vuln-lab/: README.md
bench/fixtures/nimbus-vuln-lab/app/src/app/api/accounts/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/admin/users/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/avatar/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/login/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/me/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/pay/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/profile/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/statements/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/transactions/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/transfer/: route.js
bench/fixtures/nimbus-vuln-lab/app/src/app/api/verify-otp/: route.js
benchmarks/: benchmark-claude-vampi.json  benchmark-claude-vampi.md  benchmark-claude.json  benchmark-claude.md  benchmark-dgx-vampi.json  benchmark-dgx-vampi.md  benchmark-openai-vampi.json  benchmark-openai-vampi.md  benchmark-openai.json  benchmark-openai.md  compare-claude-openai.md  compare-vampi-three-way.md
config/: agents.dgx.yaml  agents.openai.yaml  agents.yaml
demo/: build_demo_out.py
docs/: DEMO.md  PROJECT_STATE.md  QUALITY_PLAN.md  TRY_IT.md  USAGE.md
out-openai/: findings.json  remediations.json  summary.json  triage.json
out-openai/policies/: api_schema.restrict-customer-fields.json  malicious_user.detect-and-mitigate-id-enumeration.json  rate_limit.otp-verification-rate-limit.json  service_policy.csrf-protect-logout.json  service_policy.deny-negative-amount-transfer.json  service_policy.deny-unvalidated-url-fetch.json  service_policy.restrict-admin-users-access.json  waf.waf-sql-injection-protection.json  waf_data_guard.mask-sensitive-customer-data.json  waf_data_guard.mask-sensitive-data.json
out-openai/remediations/: broken-auth-001.patch  broken-auth-001.pr.md  idor-001.patch  idor-001.pr.md  logout-auth-001.patch  logout-auth-001.pr.md  mass-assign-001.patch  mass-assign-001.pr.md  neg-pay-001.patch  neg-pay-001.pr.md  rate-abuse-001.patch  rate-abuse-001.pr.md  sensitive-data-001.patch  sensitive-data-001.pr.md  sqli-001.patch  sqli-001.pr.md  ssrf-001.patch  ssrf-001.pr.md
src/vpcopilot/: __init__.py  apply.py  audit.py  bench.py  bench_model.py  cli.py  config.py  controls.py  correlate.py  engine.py  harness.py  impact.py  lab.py  ledger.py  pipeline.py  pr.py  probe.py  refiner.py  repo_scan.py  report.py  retire.py  routes.py  schemas.py  xc.py
src/vpcopilot/agents/: __init__.py  discover.py  generate.py  probe.py  refine.py  remediate.py  triage.py  verify.py
src/vpcopilot/console/: __init__.py  app.py
src/vpcopilot/console/static/: index.html
tests/: conftest.py  test_apply_engine.py  test_audit.py  test_b2_refine.py  test_b5.py  test_b7_b8.py  test_bench.py  test_bench_model.py  test_correlate.py  test_engine.py  test_guards.py  test_impact.py  test_lab.py  test_ledger.py  test_lint.py  test_model_switch.py  test_normalize.py  test_p0.py  test_pipeline_dedup.py  test_pipeline_replay.py  test_probe.py  test_refiner.py  test_report.py  test_retire.py  test_retire_and_controls.py  test_routes.py  test_schema_golden.py  test_schemas.py  test_xc.py
