[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "virtual-patch-copilot"
version = "0.1.0"
description = "Agent pipeline that finds vulnerabilities, triages each to the right F5 Distributed Cloud control (or to code), generates the virtual patch, and drafts the real code fix. Model-independent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "litellm>=1.40",      # transport: one interface to Anthropic/OpenAI/Gemini/Ollama/...
  "instructor>=1.3",    # structured output (JSON Schema + validate/repair) across providers
  "pydantic>=2.6",      # typed agent I/O
  "pyyaml>=6.0",        # config/agents.yaml
  "typer>=0.12",        # CLI
  "rich>=13.0",         # pretty CLI output
  "python-dotenv>=1.0", # load .env
  "httpx>=0.27",        # XC config API client + validation prober
]

[project.optional-dependencies]
# Pulled in for the remediation-PR increment.
deploy = ["PyGithub>=2.3"]
dev = ["pytest>=8.0"]

[project.scripts]
vpcopilot = "vpcopilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vpcopilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
